@@ -1,0 +1,2 @@
+List, query and manipulate all system processes, on 'Windows', 'Linux'
+and 'macOS'.
